objects/Participant_Check_In_Out_History__c.object
<CustomObject>
    <fields>
        <fullName>CheckBy__c</fullName>
        <label>CheckBy</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check Out</label>
        <referenceTo>Participant_Check_In_Out_History__c</referenceTo>
        <relationshipLabel>Participants Check In/Out History</relationshipLabel>
        <relationshipName>Participants_Check_In_Out_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Participants__c</referenceTo>
        <relationshipLabel>Participants Check In/Out History</relationshipLabel>
        <relationshipName>Participants_Check_In_Out_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check In</fullName>
                </value>
                <value>
                    <fullName>Check Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>